<resources>
    <string name="app_name">Bangalore</string>
    <string name="nav_header_image">Image for navigation pane header</string>
    <string name="menu_section_places">Places</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_title_park">Parks</string>
    <string name="menu_title_restaurants">Restaurants</string>
    <string name="menu_title_historical_places">Historical Places</string>
    <string name="menu_title_malls">Malls</string>
    <string name="location_picture">location picture</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home_bangalore">logo</string>
    <string name="home_bangalore_2">bangalore lake</string>
    <string name="home_bangalore_description_p1">
        Bangalore, officially known as Bengaluru, is the capital of the Indian state of Karnataka. It has a population of over ten million, making it a megacity and the third most populous city and fifth most populous urban agglomeration in India. It is located in southern India on the Deccan Plateau. Its elevation is over 900 m (3,000 ft) above sea level, the highest of India\'s major cities.
        \n\nA succession of South Indian dynasties, the Western Gangas, the Cholas and the Hoysalas, ruled the present region of Bangalore until in 1537 CE, Kempé Gowdā – a feudal ruler under the Vijayanagara Empire – established a mud fort considered to be the foundation of modern Bangalore. In 1638, the Marāthās conquered and ruled Bangalore for almost 50 years, after which the Mughals captured and sold the city to the Mysore Kingdom of the Wadiyar dynasty. It was captured by the British after victory in the Fourth Anglo-Mysore War (1799), who returned administrative control of the city to the Maharaja of Mysore. The old city developed in the dominions of the Maharaja of Mysore and was made capital of the Princely State of Mysore, which existed as a nominally sovereign entity of the British Raj.
        \n\nIn 1809, the British shifted their cantonment to Bangalore, outside the old city, and a town grew up around it, which was governed as part of British India. Following India\'s independence in 1947, Bangalore became the capital of Mysore State, and remained capital when the new Indian state of Karnataka was formed in 1956. The two urban settlements of Bangalore – city and cantonment – which had developed as independent entities merged into a single urban centre in 1949. The existing Kannada name, Bengaluru, was declared the official name of the city in 2006.
        \n\nBangalore is sometimes referred to as the "Silicon Valley of India" (or "IT capital of India") because of its role as the nation\'s leading information technology (IT) exporter. Indian technological organisations ISRO, Infosys, Wipro and HAL are headquartered in the city. A demographically diverse city, Bangalore is the second fastest-growing major metropolis in India. It is home to many educational and research institutions in India, such as Indian Institute of Science (IISc), Indian Institute of Management (Bangalore) (IIMB), International Institute of Information Technology, Bangalore (IIITB), National Institute of Fashion Technology, Bangalore, National Institute of Design, Bangalore (NID R&amp;D Campus), National Law School of India University (NLSIU) and National Institute of Mental Health and Neurosciences (NIMHANS). Numerous state-owned aerospace and defence organisations, such as Bharat Electronics, Hindustan Aeronautics and National Aerospace Laboratories are located in the city. The city also houses the Kannada film industry.</string>
    <string name="home_bangalore_description_p2">The name "Bangalore" represents an anglicised version of the Kannada language name, "Bengaluru" ಬೆಂಗಳೂರು. It is the name of a village near Kodegehalli and was copied by Kempegowda to the city of Bangalore. The earliest reference to the name "Bengalūru" was found in a ninth-century Western Ganga Dynasty stone inscription on a "vīra gallu" (ವೀರಗಲ್ಲು) (literally, "hero stone", a rock edict extolling the virtues of a warrior). In this inscription found in Begur, "Bengaluru" is referred to as a place in which a battle was fought in 890 CE. It states that the place was part of the Ganga Kingdom until 1004 and was known as "Bengaval-uru", the "City of Guards" in Halegannada (Old Kannada).
        \n\nAn apocryphal story recounts that the 12th century Hoysala king Veera Ballala II, while on a hunting expedition, lost his way in the forest. Tired and hungry, he came across a poor old woman who served him boiled beans. The grateful king named the place "benda-kaal-uru" (literally, "town of boiled beans"), which eventually evolved into "Bengaluru". Suryanath Kamath has put forward an explanation of a possible floral origin of the name, being derived from benga, the Kannada term for Pterocarpus marsupium (also known as the Indian Kino Tree), a species of dry and moist deciduous trees, that grew abundantly in the region.
        \n\nOn 11 December 2005, the Government of Karnataka announced that it had accepted a proposal by Jnanpith Award winner U. R. Ananthamurthy to rename Bangalore to Bengaluru. On 27 September 2006, the Bruhat Bangalore Mahanagara Palike (BBMP) passed a resolution to implement the proposed name change. The government of Karnataka accepted the proposal, and it was decided to officially implement the name change from 1 November 2006. The Union government approved this request, along with name changes for 11 other Karnataka cities, in October 2014, whence Bangalore was renamed to "Bengaluru" on 1 November 2014.</string>
    <string name="historical_name_1">Halasuru Someshwara Temple</string>
    <string name="historical_description_1">Located in the suburbs of Halasuru (Ulsoor) in Bangalore, Halasuru Someshwara Temple is dedicated to the Hindu deity Shiva. Dating back to the Chola period, the temple is the oldest in all of Bangalore. Built in around the 12th and the 13th centuries by the Hoysalas, the temple is now managed and maintained by the Endowment Department of the Karnataka government. However, major modifications and additions to the temple were made during the Vijayanagar empire. Besides the several other notable features of the temple, the most fascinating are the elaborate sculptures of Ravana holding the Kailash Parvat to please Lord Shiva, Goddess Durga slaying Mahishasura (a demon), scenes from the wedding of Lord Shiva and Parvati, images of the Saptarishis etc.
        \n\nConstructed in the Vijayanagar style of architecture, the shrine has notable beautiful carvings on the walls and placid interiors. Other than the main temple, the premises are dotted with smaller shrines of other deities including Kamakshamma, Arunachaleswara, Bhimeswara, Nanjundeswara and Panchalingeswara. The temple is one of the most popular places of attraction in Bangalore and is especially flocked by a significant number of tourists at the time of Mahashivrathri. The devotees believe that the Hindu gods Brahma and Vishnu also worshipped in this temple.</string>
    <string name="historical_name_2">Bangalore Palace</string>
    <string name="historical_description_2">An epitome of great architecture and beauty, The Majestic Bangalore Palace preserves in it the spice of old regal opulence. Currently the central attraction in Bangalore, the palace was built in the year 1878. Chamarajendra Wadiyar\'s British Guardians bought the original property in 1873 from the principal of Bangalore Central High School, Rev, J Garret, from his funds. The palace is extraordinarily vast and spread across 45,000 square feet. A mixture of Tudor and Scottish Gothic architecture have resulted into the grand palace that we see today.The wooden structure of the palace along with the beautiful carvings both inside and outside showcases the royal culture in different ways.
        \n\nApart from being a major tourist destination, the palace is a host to different cultural events, rock shows, and marriages. As per beliefs, King Chamarajendra Wadiyar drew his inspiration for building the palace from the Windsor Castle of London. The granite seats decorated with fluorescent blue ceramic tiles on the ground floor, a fairy tale Ballroom, the famous painter Raja Ravi Varma\'s paintings, vine-covered walls, and the Durbar Hall on the first floor come together to form the prepossessing Bangalore Palace.
        \n\nA visit to the palace gives you a chance to witness the elegant and lavish splendour of one of the most powerful dynasties of South India. An audio tape is available inside the Palace, both in Hindi and English, to help the people having language issues, understand its history better.</string>
    <string name="historical_name_3">ISKCON Temple</string>
    <string name="historical_description_3">
        Located in Rajajinagar area of Bangalore, ISKCON Temple is a revered shrine dedicated to Lord Krishna. The temple under the guidance of Madhu Pandit Dasa and was inaugurated in the year 1997 by Shankar Dayal Sharma. Apart from a religious shrine, ISKCON temple is a cultural complex accommodating dedicated deities of Sri Sri Radha Krishnachandra, Sri Sri Krishna Balarama, Sri Sri Nitai Gauranga, Sri Srinivasa Govinda and Sri Prahlada Narasimha.
        \n\nISKCON Temple is known for its activities of engagement involving ardent devotees of Lord Krishna. The temple enrols members for life and arranges programs in their community centres for Krishna consciousness and awareness of the Lord. The temple community also organises songs and recitals admiring and praying to Krishna in public processions. Lectures and prayer services are regularly conducted here as well. In addition, the ISKCON temple community conducts a wide variety of activities directed towards rediscovering spirituality on an individual level as well as creating a spirit of harmony in the community.</string>
    <string name="historical_name_4">Vidhana Soudha</string>
    <string name="historical_description_4">Described by Pandit Jawaharlal Nehru as \'a temple dedicated to the nation\', Vidhana Soudha houses the State Legislature and the Secretariat of Karnataka and is one of the most popular attractions in the lively and colourful city of Bengaluru. It also proudly boasts the title of being the largest state legislative building in the country. With four entrances in all four directions and four floors above the ground level and one below it, we surely don\'t doubt the title. Popularly known as the \'Taj Mahal of South India\', it is counted as one of the most magnificent buildings in the city and is sure to impress the onlooker with its sophisticated poise and glorified grandiose. The entire monument is illuminated on Sundays and public holidays and is a sight for sore eyes.
        \n\nThen Prime Minister Sri Pandit Jawaharlal Nehru along with then Chief Minister K.C. Reddy laid down the first brick of this establishment on 13 July 1951 and initiated the construction of a monument that symbolizes the legislative sovereignty of the people of the country. Its construction took a good five years and it was finally inaugurated in 1956 to become the largest legislative building in India. Constructed under the shadow of Sri. Kengal Hanumanthaiya\'s extensive knowledge and unmatched expertise, the Vidhana Soudha stands 150 feet tall and boasts of an elegant and truly exquisite Neo-Dravidian style of architecture. Looking at this magnanimous structure and staring into its unflinching prowess enlightens you of how the marvel is worth every single penny, and more, spent to build it.</string>
    <string name="park_name_1">Cubbon Park</string>
</resources>