<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_title_home" />
        <item android:title="@string/menu_section_places">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_historical"
                        android:title="@string/menu_title_historical_places" />
                    <item
                        android:id="@+id/nav_park"
                        android:title="@string/menu_title_park" />
                    <item
                        android:id="@+id/nav_malls"
                        android:title="@string/menu_title_malls" />
                    <item
                        android:id="@+id/nav_restaurants"
                        android:title="@string/menu_title_restaurants" />
                </group>
            </menu>
        </item>
    </group>
</menu>