<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.navinnayak.android.tourguideapp.MainActivity"
    tools:showIn="@layout/app_bar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fragment_padding">

        <ImageView
            android:id="@+id/image_1"
            style="@style/ImageStyle"
            android:contentDescription="@string/home_bangalore"
            android:src="@drawable/bengaluru_logo" />

        <TextView
            android:id="@+id/text_1"
            style="@style/HomeTextStyle"
            android:text="@string/home_bangalore_description_p1" />

        <ImageView
            android:id="@+id/image_2"
            style="@style/ImageStyle"
            android:contentDescription="@string/home_bangalore_2"
            android:src="@drawable/bangalore_lake" />

        <TextView
            android:id="@+id/text_2"
            style="@style/HomeTextStyle"
            android:text="@string/home_bangalore_description_p2" />
    </LinearLayout>
</ScrollView>